[package]
name = "ed2kia"
version = "2.1.0-sprint24"
edition = "2021"
description = "Descentralized distributed interpretability network using Sparse Autoencoders (Qwen-Scope)"
license = "Apache-2.0"
authors = ["ed2kIA Contributors"]
repository = "https://github.com/ed2kia/ed2kia"
readme = "README.md"
keywords = ["p2p", "sae", "interpretability", "distributed-ml", "libp2p"]
categories = ["network-programming", "command-line-utilities"]

# Apache 2.0 + Ethical Use Clause
# This software is provided for the benefit of humanity and responsible AI development.
# It must be used transparently, auditable, free of backdoors, and compatible with voluntary global infrastructure.

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# P2P - libp2p
libp2p = { version = "0.53", features = ["identify", "kad", "mdns", "request-response", "gossipsub", "plaintext", "tcp", "noise", "yamux", "cbor", "tokio"] }
libp2p-identity = { version = "0.2", features = ["secp256k1"] }

# Serialization
prost = "0.12"
flatbuffers = "23.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# ML / Candle
candle-core = "0.6"
candle-nn = "0.6"
safetensors = "0.3"

# Pin half to 2.4.x to avoid rand 0.9 conflict (candle-core 0.6 needs rand 0.8)
half = ">=2.4, <2.5"

# CLI & Config
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
config = "0.13"

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
hex = "0.4"
num_cpus = "1.16"
bytemuck = { version = "1.14", features = ["extern_crate_alloc"] }
sha2 = "0.10"
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12"

# WASM Sandbox - Fase 3
wasmtime = { version = "17.0", default-features = false, features = ["cranelift"] }

# ZKP - Fase 3
ark-ec = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4"

# Human-in-the-loop - Fase 3
crossterm = "0.27"

# Web UI - Fase 4
axum = { version = "0.7", features = ["json", "ws"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Embedded DB - Fase 4
redb = "1.5"

# Monitoring - Fase 4
prometheus = "0.13"
lazy_static = "1.4"

# Dashmap - thread-safe concurrent HashMap for session management
dashmap = "6.0"

# Graph - Semantic Atlas (v2.1-atlas)
petgraph = "0.6"

# Governance - Fase 5
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chrono = { version = "0.4", features = ["serde"] }

# Ecosystem Sync - Fase 5
reqwest = { version = "0.11", features = ["json", "stream"] }

# Bootstrap - Fase 5
fastrand = "2.1"

# CLI Wizard - dialoguer (Sprint15 — v2.1-operator-cli)
dialoguer = { version = "0.11", optional = true }
env_logger = { version = "0.11", optional = true }

# Property-based fuzzing (Sprint13 — v2.1-fuzzing)
proptest = { version = "1.5", optional = true }

# QLoRA/GGUF (Sprint16.1 — v2.1-qlora-gguf)
memmap2 = { version = "0.9", optional = true }
zstd = { version = "0.13", optional = true }

# WASM Browser Node dependencies (optional, feature-gated)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["Worker", "WorkerGlobalScope", "WorkerOptions", "MessagePort", "MessageEvent", "Navigator", "Window", "CustomEvent", "Event", "EventInit", "EventTarget", "Url", "Blob"], optional = true }

# Cross-platform
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Console"] }

# WASM Browser Node — v2.1-wasm-browser (wasm32-unknown-unknown target)
# Note: These are optional and only activated via feature flags.
# On wasm32 target, getrandom requires "js" feature.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
# CONSOLIDATION: v1.0.0 stable feature structure
# `default` enables all stable modules (Fases 1-9 unified)
default = ["stable"]

# ─── Stable Features (Production) ───
# `stable` enables all validated modules from Fases 1-9
# Includes legacy feature flags for backward compatibility
stable = [
    "phase6-core",
    "phase6-sprint2",
    "phase6-experimental",
    "phase7-sprint1",
    "phase7-sprint2",
    "phase8-sprint1",
    "phase8-sprint2",
    "phase9-sprint1",
    "v1.1-sprint1",
    "v1.1-sprint2",
    "v1.1-sprint3",
    "v1.1-sprint5",
    "v1.2-sprint1",
    "v1.2-sprint2",
    "v1.2-sprint3",
    "v1.2-sprint4",
    "v1.3-sprint1",
    "v1.3-sprint2",
    "v1.3-sprint3",
    "v1.4-sprint3",
    "v1.6-sprint1",
    "v1.6-sprint2",
    "v1.6-sprint3",
]

# v1.5.0 Sprint 1 — SAE Fine-Tuning v5, Cross-Chain Pools v4, DAO Ledger v5, Async ZKP v9
"v1.5-sprint1" = []

# v1.5.0 Sprint 2 — Federation Scaling v5, Async ZKP v10, UI Dashboard v6
"v1.5-sprint2" = []

# v1.5.0 Sprint 3 — SAE Fine-Tuning v6, Federation Scaling v6, Async ZKP v11 & Final Consolidation
"v1.5-sprint3" = []

# v1.6.0 Sprint 1 — Cross-Chain Interoperability Foundation
"v1.6-sprint1" = []

# v1.6.0 Sprint 2 — Federation Scaling v7, Async ZKP v13, UI Dashboard v7
"v1.6-sprint2" = []

# v1.6.0 Sprint 3 — SAE Fine-Tuning v7, Cross-Model Federation Scaling v7, Async ZKP v14 & Final Consolidation
"v1.6-sprint3" = []

# v1.9.0 Sprint 1 — Production Hardening & Mobile GUI Foundation (FASE 69)
# Mobile Foundation (Tauri/React Native bridge), Async Steering hardening, ZKP Circuit Optimization
"v1.9-sprint1" = []

# v1.9.0 Sprint 2 — ZKP Aggregation & Neural Steer UI (FASE 72)
# Proof Aggregation (batch verification, commitment pooling), Neural Steer UI (ethical sliders)
"v1.9-sprint2" = []

# v2.0.0 Sprint 1 — GUI Tauri, ZKP v2 Multi-Curve & K8s Operator Base (FASE 83)
# Tauri GUI scaffold (desktop bridge), Multi-curve ZKP (BN254/BLS12-381/BLS12-377/Pasta),
# K8s operator CRDs (Node/Lease/SteeringConfig) with reconciliation loop
"v2.0-sprint1" = []

# v2.0.0 Sprint 2 — Neural Steer Integration, ZKP Optimization & WASM Hardening (FASE 85)
# Neural Tauri Bridge (slider validation, ethical bounds), Commitment Pool (batch ZKP opt),
# WASM Mobile Hardening (memory limits, thermal fallback, adaptive scheduler),
# K8s manifests (node-deployment, lease-configmap, steering-service)
"v2.0-sprint2" = []

# v1.7.0 Sprint 1 — RFC-001 PoC: FP8/INT4 Quantization + Async Steering Signals
"v1.7-sprint1" = []

# v1.8.0 Sprint 1 — "ChatGPT Moment": API Explorer, Reputation Proof Schema, QuantConfig
"v1.8-sprint1" = []

# v1.8.0 Sprint 2 — Geographic Routing & WASM Mobile Bridge
"v1.8-sprint2" = []

# v2.1 Sprint 1 — Structural Scaffold (Post-RFC-001)
# Feature-gated placeholder modules for post-stable development.
# Zero functional logic — requires explicit feature flag to enable.
"v2.1-sprint1" = []
"v2.1-gui" = []
"v2.1-zkp-v3" = []
"v2.1-enterprise" = []

# v2.1 Observability — Prometheus/Grafana metrics (Sprint11 — Production)
# Prometheus registry with consensus, reputation, network, RLHF & WASM worker metrics.
# /api/metrics endpoint with rate limiting. Zero telemetry, zero external calls.
"v2.1-observability" = []

# v2.1 Governance — CODEOWNERS, CONTRIBUTING, GOVERNANCE framework (Sprint11)
# Community governance structure, RFC process, ethical contribution clause.
"v2.1-governance" = []

# v2.1 Launch Readiness — Pre-launch validation script (Sprint11)
# Automated checklist: cargo check/test, critical files, doc integrity.
"v2.1-launch-readiness" = []

# v2.1 Security Hardening — CVE remediation, dependency upgrades (Post-Q1 2027 audit)
# Feature-gated placeholder for security infrastructure.
# Zero functional logic — requires explicit feature flag to enable.
"v2.1-security-hardening" = []

# v2.1 WASM Browser Node — Browser-based P2P node (wasm32-unknown-unknown)
# WebRTC/WebSocket transport via libp2p-webrtc-websys + libp2p-websocket-websys
# Web Worker bridge for background compute, zero inference logic (scaffold only)
"v2.1-wasm-browser" = ["wasm-bindgen", "js-sys", "web-sys"]

# v2.1 MVP Core Loop — Isolated core cycle (KAD discovery → tensor dist → SAE → result)
# Advanced modules (ZKP, Governance, Reputation) stubbed behind feature gates
"v2.1-mvp-core" = []

# v2.1 Relay Server — WebRTC/Circuit Relay v2 signaling scaffold
# libp2p-webrtc + libp2p-relay for browser node connectivity
"v2.1-relay-server" = []

# v2.1 WASM Micro-Sharding — Tensor chunking for wasm32 peers (≤50MB)
# Safe slicing via candle-core, stride/shape preservation
"v2.1-wasm-micro-sharding" = []

# v2.1 WASM Telemetry Bridge — wasm-bindgen events for DOM real-time updates
# CustomEvent dispatch from inference_bridge to browser JS
"v2.1-wasm-telemetry" = []

# v2.1 Qwen Scope SAE — Top-k SAE architecture in candle-core (4 tensors, forward pass, WASM-compatible)
"v2.1-qwen-scope-sae" = []

# v2.1 Qwen Scope Loader — Safetensors ingestion + micro-sharding integration
"v2.1-qwen-scope-loader" = []

# v2.1 Audit Payloads — AuditTaskPayload → AuditResultPayload, WASM-friendly serialization
"v2.1-audit-payloads" = []

# v2.1 WASM Web Workers — Offloading inference to Web Workers (no SharedArrayBuffer)
# postMessage/onmessage standard, wasm-bindgen-futures for async response
"v2.1-wasm-workers" = []

# v2.1 WebRTC + Relay — libp2p WASM transport config, Faro/Relay dial via Multiaddr
# libp2p-webrtc-websys + RelayBehaviour + Identify for browser P2P
"v2.1-webrtc-relay" = []

# v2.1 Orchestrator Node — Native orchestrator with libp2p swarm, task queue, SAE loading
# Async-safe with tokio::spawn and mpsc channels for task distribution
# Requires v1.7-sprint1 to access protocol::audit_payloads
"v2.1-orchestrator" = ["v2.1-audit-payloads", "v2.1-qwen-scope-loader", "v1.7-sprint1"]

# v2.1 Task Manager — Dispatch loop, peer assignment, result aggregation
# Timeout-based retry, checksum validation, progress events
"v2.1-task-manager" = ["v2.1-orchestrator"]

# v2.1 Docker Deploy — Multi-stage Dockerfile + docker-compose for zero-friction deployment
"v2.1-docker-deploy" = []

# v2.1 Semantic Graph — In-memory semantic graph using petgraph + dashmap
# ConceptNode/ActivationEdge, insert_activation, get_top_features_for_token, get_top_tokens_for_feature
"v2.1-semantic-graph" = []

# v2.1 Rosetta API — axum HTTP endpoints for semantic graph queries
# GET /api/feature/{id}, GET /api/token/{word}, integrated via tokio::spawn
"v2.1-rosetta-api" = ["v2.1-semantic-graph"]

# v2.1 Atlas UI — 3D force-graph visualizer (web/atlas-visualizer.js + web/atlas.html)
"v2.1-atlas-ui" = []

# v2.1 Task Redundancy — N-Node Dispatch (same task to replication_factor peers)
# Timeout-based re-assignment, peer tracking per task
"v2.1-task-redundancy" = ["v2.1-task-manager"]

# v2.1 Consensus Engine — Deterministic majority rule with f32 epsilon tolerance
# O(N) grouping by index hash, threshold = (N/2)+1
"v2.1-consensus-engine" = []

# v2.1 Reputation System — Slashing & Banning matrix
# DashMap scores + DashSet ban_list, auto-disconnect on score < 0
"v2.1-reputation-system" = ["v2.1-consensus-engine"]

# v2.1 HuggingFace Bridge — Progressive .safetensors ingestion via reqwest streaming
# stream_sae_to_shards(repo_id, target_dir) → SHA256 verified, ≤50MB shards
"v2.1-hf-bridge" = ["v2.1-qwen-scope-loader"]

# v2.1 Merit System — Cryptographic merit proofs via ed25519-dalek signing
# MeritProof = {node_id, audit_count, timestamp, signature}, zero economic value
"v2.1-merit-system" = ["v2.1-consensus-engine"]

# v2.1 Production Portal — Alpine.js dashboard with WASM Worker + WebRTC integration
# Real-time stats: voluntarios activos, neuronas auditadas, ataques bloqueados
"v2.1-portal-prod" = []

# v2.1 Sybil Resistance — Ethical Micro-PoW handshake
# SHA-256 challenge with configurable difficulty, rate limiting + ban tracking
# Web Worker isolation via postMessage (zero main-thread blocking)
"v2.1-sybil-micropow" = []

# v2.1 Orchestrator Federation — GossipSub mesh for multi-orchestrator coordination
# libp2p gossipsub with StrictSign, ATLAS_SYNC + REPUTATION_SYNC topics
"v2.1-orchestrator-federation" = []

# v2.1 RLHF Feedback Bridge — Human correction pipeline for semantic alignment
# POST /api/feedback + GET /api/feedback/export, rate limiting per node_id
"v2.1-rlhf-bridge" = ["v2.1-rosetta-api"]

# v2.1 Stewardship — Mainnet bootstrap, RFC pipeline & community dashboard (Sprint12)
# scripts/bootstrap-mainnet.sh: Docker Compose launch + healthchecks + pre-launch validation
# .github/workflows/rfc-triage.yml: Auto-label, milestone assign, voting guide comment
# web/stewardship-dashboard.html: Alpine.js governance dashboard (Network, Governance, Audit)
"v2.1-stewardship" = []
"v2.1-rfc-pipeline" = []
"v2.1-mainnet-bootstrap" = []

# v2.1 Load Testing — Concurrent WASM node stress tests (Sprint13)
# tests/load/stress_test.rs: N concurrent nodes, SAE dummy inference, consensus under load
# Metrics: p95 latency, throughput (tasks/s), memory footprint, CPU usage, slashing rate
# Resource control: --test-threads=4, iteration limits for CI, tokio::time::timeout
"v2.1-load-testing" = []

# v2.1 Fuzzing — Property-based fuzzing with proptest (Sprint13)
# tests/fuzz/consensus_fuzz.rs: Consensus determinism, Byzantine tolerance,
# reputation monotonicity, Sybil resistance invariants
# CI config: proptest::config::FuzzyConfig::default().with_cases(1000)
"v2.1-fuzzing" = ["proptest"]

# v2.1 Tauri Bridge — Cross-platform desktop client (Sprint13)
# src-tauri/: Tauri v2 scaffold, integrate with web/ (Atlas 3D + Stewardship Dashboard)
# Backend commands: start_worker, sync_atlas, get_merit_proof, stop_worker
# Sandboxed, no external telemetry, minimal permissions
"v2.1-tauri-bridge" = []

# v2.1 Federated Aggregation — Secure gradient aggregation with differential privacy (Sprint14)
# src/federated/aggregator.rs: FedAvg weighted by reputation, INT8/FP8 compression,
# Gaussian noise (ε=1.0, δ=1e-5), Ed25519 signature verification, divergence threshold rejection
"v2.1-federated-agg" = []

# v2.1 SAE Training Pipeline — Distributed SAE training with candle-core (Sprint14)
# src/sae/training_pipeline.rs: forward → sparsity mask → backward → gradient clipping → compression
# Automatic checkpointing every N steps, hooks: on_step, on_epoch, on_convergence
"v2.1-sae-training" = []

# v2.1 Ethical Audit — Automated ethical compliance verification (Sprint14)
# scripts/verify-ethical-compliance.sh: LICENSE ethical clause, financial pattern scan,
# telemetry check, generates docs/ethical-compliance-report.md
"v2.1-ethical-audit" = []

# v2.1 Chaos Engine — Controlled fault injection for operational resilience (Sprint15)
# src/chaos/engine.rs: Async motor (tokio) for fault injection in local/testnet.
# Scenarios: WASM node failure, network partition, artificial latency, malicious votes,
# task queue saturation. Only active with --chaos-mode, limited duration, auto rollback.
"v2.1-chaos-engine" = []

# v2.1 Real Dataset Loader — Streaming .jsonl/.parquet with SHA256 validation (Sprint24)
# src/dataset/public_loader.rs: PublicDatasetLoader with chunking ≤50MB,
# SHA256 per-chunk validation, fallback to dummy dataset on network failure.
# Non-wasm32 only (reqwest + tokio::io dependency).
"v2.1-real-dataset-loader" = []

# v2.1 Operator CLI Wizard — Standalone TUI binary for guided node setup (Sprint15)
# src/bin/ed2kia-cli.rs: clap + dialoguer, role selection, config generation,
# environment verification, health checks, log export.
"v2.1-operator-cli" = ["dialoguer", "env_logger"]

# v2.1 Auto-Remediation — Automated incident response pipeline (Sprint15)
# scripts/auto-remediate.sh: set -euo pipefail, trap cleanup, active monitoring,
# graceful restart, rollback to checkpoint, incident report generation, webhooks.
"v2.1-auto-remediation" = []

# ─── Sprint16: Kernel Estuardiano & Arquitectura v2.1 ───

# v2.1 QLoRA/GGUF — Quantized LoRA adapters over immutable GGUF base models (Sprint16)
# src/qlora_gguf/: GGUF parsing (loader.rs), QLoRA diff application (adapter.rs),
# KB/MB compression for GossipSub (payload.rs). Law 3: Zero computational waste.
"v2.1-qlora-gguf" = ["memmap2", "zstd"]

# v2.1 Proof of Comprehension — Cryptographic proof of useful work via SAE activations (Sprint16)
# src/proof_of_comprehension/: SAE activation batches (task.rs), gradient validation,
# cryptographic proof verification (verifier.rs). Law 2: Transparent audit.
"v2.1-proof-of-comprehension" = []

# v2.1 Stuartian Filter — Deterministic alignment filter with KL divergence detection (Sprint16)
# src/stuartian_filter/: KL divergence monitoring (divergence.rs), deterministic rejection
# with reputation penalty (slashing.rs). Law 2: Error recognition.
"v2.1-stuartian-filter" = []

# v2.1 Async Gossip with CRDTs — Partition-tolerant GossipSub with conflict-free convergence (Sprint16)
# src/async_gossip/: libp2p GossipSub config (mesh.rs), SQLite/redb offline cache (cache.rs),
# reputation/state CRDTs (crdt.rs). Law 5: Multiple possibilities, eventual consistency.
"v2.1-async-gossip-crdt" = []

# v2.1 Distributed Training — Hierarchical committees, staleness-aware weighting & BFT aggregation (Sprint16.2)
# src/federated/committees.rs: CommitteeSelector trait, LocalAggregator, GlobalMesh topology (Law 3)
# src/federated/staleness.rs: Staleness decay w = 1/(1+tau)^alpha for async convergence (Law 2)
# src/federated/bft_aggregator.rs: Coordinate-wise Median + Multi-Krum BFT aggregation (Law 2)
"v2.1-agg-committees" = []
"v2.1-staleness-aware" = []
"v2.1-bft-aggregation" = []

# v2.1 Stuartian Context Tensor (SCT) — 3D ethical alignment replacing RLHF 2D (Sprint16.3)
# src/alignment/sct_core.rs: StuartianTensor {x, y, z}, SCTEvaluator trait, hard Z < 0 rejection
# src/alignment/sct_reward.rs: Linear projection hidden→3D, sigmoid/sigmoid/tanh, SCTLoss
# src/alignment/sct_guard.rs: Intercept BFT payloads, slash reputation on repeated Z < 0
"v2.1-sct-core" = []
"v2.1-sct-reward" = []
"v2.1-sct-guard" = []

# v2.1 Async Gossip Mesh — GossipSub async config with partition tolerance (Sprint16.4)
# src/async_gossip/mesh.rs: MeshConfig with heartbeat 500ms, fanout_ttl 120s, mesh_n 6/4/12
"v2.1-async-gossip" = []

# v2.1 Offline Cache — redb-based offline storage with priority sync queue (Sprint16.4)
# src/async_gossip/cache.rs: PendingQueue prioritized by timestamp, exponential backoff sync
"v2.1-offline-cache" = []

# v2.1 CRDT State — GCounter, PNCounter, ORSet for conflict-free reputation (Sprint16.4)
# src/async_gossip/crdt.rs: Commutative/associative/idempotent merge, bincode serialization
"v2.1-crdt-state" = []

# ─── Sprint17: Kernel Integration & Mainnet Activation ───

# v2.1 Kernel Integration — E2E cross-validation of all Stuartian Laws (Sprint17)
# tests/integration/kernel_e2e_test.rs: GGUF→QLoRA→PoC→SCT→BFT→CRDT→Gossip→Cache pipeline
# Validates Ley 1-5 as coherent organism before public deployment
"v2.1-kernel-integration" = [
    "v2.1-async-gossip",
    "v2.1-offline-cache",
    "v2.1-crdt-state",
    "v2.1-bft-aggregation",
    "v2.1-sct-guard",
    "v2.1-sct-core",
    "v2.1-qlora-gguf",
    "v2.1-proof-of-comprehension",
    "v2.1-stuartian-filter",
    "v2.1-chaos-engine"
]

# v2.1 Mainnet Activation — Safe deployment protocol (Sprint17)
# scripts/activate-mainnet.sh: Env validation, docker-compose, healthchecks, SCTGuard/BFT activation
# docs/kernel-architecture.md: Unified kernel blueprint with Stuartian philosophy mapping
"v2.1-mainnet-activation" = ["v2.1-kernel-integration"]

# ─── Sprint18: Audit Prep & Governance Activation ───

# v2.1 Audit Preparation — External audit prep, CVE scanning, ethical compliance (Sprint18)
# scripts/audit-scan.sh: Automated pre-audit scanning pipeline
# docs/audit-prep.md: Guide for external auditors
"v2.1-audit-prep" = ["v2.1-kernel-integration"]

# v2.1 Governance Activation — Community node validator, automated RFC pipeline (Sprint18)
# scripts/validate-node.sh: Lightweight validator for volunteer nodes
# .github/workflows/governance-rfc.yml: Automated RFC processing pipeline
"v2.1-governance-activation" = ["v2.1-audit-prep"]

# ─── Sprint19: Public Launch & Community Onboarding ───

# v2.1 Public Launch — Launch automation, public observability dashboard (Sprint19)
# scripts/launch-day.sh: Idempotent public launch automation with rollback
# web/public-dashboard.html: Public observability dashboard (Alpine.js, readonly)
"v2.1-public-launch" = ["v2.1-kernel-integration"]

# v2.1 Community Onboarding — Zero-friction onboarding wizard, merit registration (Sprint19)
# src/bin/ed2kia-onboard.rs: Community onboarding wizard (clap + dialoguer)
# docs/public-launch-guide.md: Day-zero operational guide
"v2.1-community-onboarding" = ["v2.1-public-launch"]

# ─── Hardware Acceleration ───
cpu = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]

# ─── Legacy Feature Flags (Deprecated - maintained for backward compatibility) ───
# These are now sub-features of `stable`. Will be removed in v2.0.0.
core-only = []
phase6-core = []
phase6-sprint2 = []
phase6-experimental = []
phase7-sprint1 = []
phase7-sprint2 = []
phase8-sprint1 = []
phase8-sprint2 = []
phase9-sprint1 = []

# ─── Dev/Experimental Features (Not included in stable) ───
debug = []
test-mocks = []

# ─── v1.1.0 Sprint Features (Now part of `stable`) ───
# These are sub-features of `stable` for backward compatibility.
# Will be removed in v2.0.0.
"v1.1-sprint1" = []
"v1.1-sprint2" = []
"v1.1-sprint3" = []
"v1.1-sprint4" = []
"v1.1-sprint5" = []

# ─── v1.2.0 Sprint Features (Development) ───
# Multi-Chain Federation & SAE Distributed Fine-Tuning
"v1.2-sprint1" = []
# Cross-Chain Consensus, DAO Governance v3 & Distributed Fine-Tuning
"v1.2-sprint2" = []
# SLO/SLA v3, Cross-Model Scaling v2, UI Dashboard v3 & Async ZKP v2
"v1.2-sprint3" = []
# Marketplace v3, Alignment Loop v3, Federation Scaling v3 & Final Consolidation
"v1.2-sprint4" = []

# ─── v1.3.0 Sprint Features (Development) ───
# SAE Fine-Tuning v2, Cross-Node Compute Routing, Reputation Ledger v2, Async ZKP v3
"v1.3-sprint1" = []
# Technical Resource Pools, DAO Ledger v2, Async ZKP v4, UI Dashboard v4
"v1.3-sprint2" = []
# SAE Fine-Tuning v3, Federation Scaling v3, Async ZKP v5 & Final Consolidation
"v1.3-sprint3" = []

# ─── v1.4.0 Sprint 1 Features (Production Foundation) ───
# Halo2 ZKP Engine, Tokio Async Optimization, LZ4 Compression, Advanced Metrics
"v1.4-sprint1" = []

# ─── v1.4.0 Sprint 2 Features (Development) ───
# Cross-Chain Pools v3, DAO Ledger v4, Async ZKP v7, UI Dashboard v5
"v1.4-sprint2" = []

# ─── v1.4.0 Sprint 3 Features (Final) ───
# SAE Fine-Tuning v4, Federation Scaling v4, Async ZKP v8, Final Consolidation
"v1.4-sprint3" = []

# ─── Sprint20: Stuartian Geometry 3D & 3D Visualization ───
"v2.1-stuartian-geometry" = ["v2.1-sct-core"]

"v2.1-3d-viz" = ["v2.1-stuartian-geometry"]

# ─── Sprint21: Interoperabilidad P2P & Escalado Federado ───
"v2.1-cross-mesh" = []

"v2.1-region-sync" = []

"v2.1-federation-bootstrap" = ["v2.1-cross-mesh", "v2.1-region-sync"]

# ─── Sprint22: Mainnet Genesis & Steward Activation ───

# v2.1 Mainnet Genesis — Deterministic genesis state, Ed25519 signing, dual export (Sprint22)
# src/mainnet/genesis.rs: GenesisState with SHA256 hash + Ed25519 signature
# scripts/genesis-bootstrap.sh: 5-phase automated bootstrap
"v2.1-mainnet-genesis" = []

# v2.1 Steward Portal — Alpine.js operations dashboard, merit-verified access (Sprint22)
# web/steward-portal.html: Genesis verification, network health, steward actions
# web/assets/steward-portal.js: Alpine.js component with polling + debounce
"v2.1-steward-portal" = ["v2.1-mainnet-genesis"]

# ─── Sprint23: End-to-End Local MVP (La Chispa) ───

# v2.1 MVP Simulation — 3-node local testnet, SCT Hard Reject demo, BFT consensus (Sprint23)
# src/mvp/sae_simulator.rs: Dummy SAE payload generator (Symbiotic/Perverse profiles)
# src/mvp/consensus_runner.rs: SCT Guard + BFT Aggregator execution
# src/mvp/local_testnet.rs: 5-phase simulation orchestrator
# src/bin/ed2k_mvp.rs: CLI binary with --dry-run, --verbose, --output-json
"v2.1-mvp-simulation" = ["v2.1-sct-core", "v2.1-sct-guard", "v2.1-bft-aggregation"]

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
tower = { version = "0.5", features = ["util"] }
# WASM encoder for generating valid test modules
wasm-encoder = "0.248"


[build-dependencies]
prost-build = "0.12"

[[bin]]
name = "ed2kia"
path = "src/main.rs"

[[bin]]
name = "ed2kia-cli"
path = "src/bin/ed2kia-cli.rs"
required-features = ["v2.1-operator-cli"]

[[bin]]
name = "ed2kia-onboard"
path = "src/bin/ed2kia-onboard.rs"
required-features = ["v2.1-community-onboarding"]

[[bin]]
name = "ed2k_mvp"
path = "src/bin/ed2k_mvp.rs"
required-features = ["v2.1-mvp-simulation"]

[lib]
name = "ed2kia"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Stress test for load testing (tests/load/) — feature-gated v2.1-load-testing
[[test]]
name = "stress_test"
path = "tests/load/stress_test.rs"
required-features = ["v2.1-load-testing"]

# v1.1.0 Sprint 1 E2E integration tests
[[test]]
name = "v1_1_sprint1_e2e"
path = "tests/integration/v1_1_sprint1_e2e.rs"
required-features = ["stable"]

# v1.1.0 Sprint 1 benchmarks (criterion-style, harness = false)
[[test]]
name = "sprint1_bench"
path = "tests/benchmarks/sprint1_bench.rs"
harness = false
required-features = ["stable"]

# v1.1.0 Sprint 2 E2E integration tests
[[test]]
name = "v1_1_sprint2_e2e"
path = "tests/integration/v1_1_sprint2_e2e.rs"
required-features = ["stable"]

# v1.1.0 Sprint 2 governance stress tests
[[test]]
name = "governance_stress"
path = "tests/load/governance_stress.rs"
required-features = ["stable"]

# v1.1.0 Sprint 3 E2E integration tests
[[test]]
name = "v1_1_sprint3_e2e"
path = "tests/integration/v1_1_sprint3_e2e.rs"
required-features = ["stable"]

# v1.1.0 Sprint 3 benchmarks
[[test]]
name = "sprint3_bench"
path = "tests/benchmarks/sprint3_bench.rs"
harness = false
required-features = ["stable"]

# v1.1.0 Sprint 4 E2E integration tests
[[test]]
name = "v1_1_sprint4_e2e"
path = "tests/integration/v1_1_sprint4_e2e.rs"
required-features = ["stable"]

# v1.1.0 Sprint 4 benchmarks
[[test]]
name = "sprint4_bench"
path = "tests/benchmarks/sprint4_bench.rs"
harness = false
required-features = ["stable"]

# v1.1.0 Sprint 5 E2E integration tests
[[test]]
name = "v1_1_sprint5_e2e"
path = "tests/integration/v1_1_sprint5_e2e.rs"
required-features = ["stable"]

# v1.1.0 Sprint 5 full network stress tests
[[test]]
name = "full_network_stress"
path = "tests/load/full_network_stress.rs"
required-features = ["stable"]

# v1.2.0 Sprint 1 E2E integration tests
[[test]]
name = "v1_2_sprint1_e2e"
path = "tests/integration/v1_2_sprint1_e2e.rs"
required-features = ["v1.2-sprint1"]

# v1.2.0 Sprint 1 benchmarks
[[test]]
name = "v1_2_sprint1_bench"
path = "tests/benchmarks/v1_2_sprint1_bench.rs"
harness = false
required-features = ["v1.2-sprint1"]

# v1.2.0 Sprint 2 E2E integration tests
[[test]]
name = "v1_2_sprint2_e2e"
path = "tests/integration/v1_2_sprint2_e2e.rs"
required-features = ["v1.2-sprint2"]

# v1.2.0 Sprint 2 stress tests
[[test]]
name = "cross_chain_stress"
path = "tests/load/cross_chain_stress.rs"
required-features = ["v1.2-sprint2"]

# v1.2.0 Sprint 3 E2E integration tests
[[test]]
name = "v1_2_sprint3_e2e"
path = "tests/integration/v1_2_sprint3_e2e.rs"
required-features = ["v1.2-sprint3"]

# v1.2.0 Sprint 3 stress tests
[[test]]
name = "sprint3_stress"
path = "tests/load/sprint3_stress.rs"
required-features = ["v1.2-sprint3"]

# v1.2.0 Sprint 4 E2E integration tests
[[test]]
name = "v1_2_sprint4_e2e"
path = "tests/integration/v1_2_sprint4_e2e.rs"
required-features = ["v1.2-sprint4"]

# v1.2.0 Sprint 4 stress tests
[[test]]
name = "sprint4_stress"
path = "tests/load/sprint4_stress.rs"
required-features = ["v1.2-sprint4"]

# v1.3.0 Sprint 1 E2E integration tests
[[test]]
name = "v1_3_sprint1_e2e"
path = "tests/integration/v1_3_sprint1_e2e.rs"
required-features = ["v1.3-sprint1"]

# v1.3.0 Sprint 1 stress tests
[[test]]
name = "sprint1_stress"
path = "tests/load/sprint1_stress.rs"
required-features = ["v1.3-sprint1"]

# v1.3.0 Sprint 2 E2E integration tests
[[test]]
name = "v1_3_sprint2_e2e"
path = "tests/integration/v1_3_sprint2_e2e.rs"
required-features = ["v1.3-sprint2"]

# v1.3.0 Sprint 3 E2E integration tests
[[test]]
name = "v1_3_sprint3_e2e"
path = "tests/integration/v1_3_sprint3_e2e.rs"
required-features = ["v1.3-sprint3"]

# v1.3.0 Sprint 3 stress tests
[[test]]
name = "sprint3_stress_v1_3"
path = "tests/load/sprint3_stress_v1_3.rs"
required-features = ["v1.3-sprint3"]

# v1.4.0 Sprint 1 E2E integration tests
[[test]]
name = "v1_4_sprint1_e2e"
path = "tests/integration/v1_4_sprint1_e2e.rs"
required-features = ["v1.4-sprint1"]

# v1.4.0 Sprint 1 benchmarks
[[test]]
name = "v1_4_sprint1_bench"
path = "tests/benchmarks/v1_4_sprint1_bench.rs"
harness = false
required-features = ["v1.4-sprint1"]

# v1.4.0 Sprint 2 E2E integration tests
[[test]]
name = "v1_4_sprint2_e2e"
path = "tests/integration/v1_4_sprint2_e2e.rs"
required-features = ["v1.4-sprint2"]

# v1.4.0 Sprint 2 benchmarks
[[test]]
name = "v1_4_sprint2_bench"
path = "tests/benchmarks/v1_4_sprint2_bench.rs"
harness = false
required-features = ["v1.4-sprint2"]

# v1.4.0 Sprint 3 E2E integration tests
[[test]]
name = "v1_4_sprint3_e2e"
path = "tests/integration/v1_4_sprint3_e2e.rs"
required-features = ["v1.4-sprint3"]

# v1.4.0 Sprint 3 final stress tests
[[test]]
name = "v1_4_final_stress"
path = "tests/load/v1_4_final_stress.rs"
required-features = ["v1.4-sprint3"]

# v1.5.0 Sprint 1 E2E integration tests
[[test]]
name = "v1_5_sprint1_e2e"
path = "tests/integration/v1_5_sprint1_e2e.rs"
required-features = ["v1.5-sprint1"]

# v1.5.0 Sprint 1 benchmarks
[[test]]
name = "v1_5_sprint1_bench"
path = "tests/benchmarks/v1_5_sprint1_bench.rs"
harness = false
required-features = ["v1.5-sprint1"]

# v1.5.0 Sprint 2 E2E integration tests
[[test]]
name = "v1_5_sprint2_e2e"
path = "tests/integration/v1_5_sprint2_e2e.rs"
required-features = ["v1.5-sprint2"]

# v1.5.0 Sprint 2 stress tests
[[test]]
name = "v1_5_sprint2_stress"
path = "tests/load/sprint2_stress.rs"
required-features = ["v1.5-sprint2"]

# v1.5.0 Sprint 3 E2E integration tests
[[test]]
name = "v1_5_sprint3_e2e"
path = "tests/integration/v1_5_sprint3_e2e.rs"
required-features = ["v1.5-sprint3"]

# v1.5.0 Sprint 3 stress tests
[[test]]
name = "v1_5_sprint3_stress"
path = "tests/load/sprint3_stress.rs"
required-features = ["v1.5-sprint3"]

# v1.6.0 Sprint 1 E2E integration tests
[[test]]
name = "v1_6_sprint1_e2e"
path = "tests/integration/v1_6_sprint1_e2e.rs"
required-features = ["v1.6-sprint1"]

# v1.6.0 Sprint 1 benchmarks
[[test]]
name = "v1_6_sprint1_bench"
path = "tests/benchmarks/v1_6_sprint1_bench.rs"
required-features = ["v1.6-sprint1"]

# v1.6.0 Sprint 2 E2E integration tests
[[test]]
name = "v1_6_sprint2_e2e"
path = "tests/integration/v1_6_sprint2_e2e.rs"
required-features = ["v1.6-sprint2"]

# v1.6.0 Sprint 2 stress tests
[[test]]
name = "v1_6_sprint2_stress"
path = "tests/benchmarks/v1_6_sprint2_stress.rs"
required-features = ["v1.6-sprint2"]

# v1.6.0 Sprint 3 E2E integration tests
[[test]]
name = "v1_6_sprint3_e2e"
path = "tests/integration/v1_6_sprint3_e2e.rs"
required-features = ["v1.6-sprint3"]

# v1.6.0 Sprint 3 final stress tests
[[test]]
name = "v1_6_final_stress"
path = "tests/load/v1_6_final_stress.rs"
required-features = ["v1.6-sprint3"]

# v2.1.0-sprint7 E2E Consensus Immune Test
[[test]]
name = "e2e_consensus_test"
path = "tests/e2e_consensus_test.rs"
required-features = ["v2.1-reputation-system", "v2.1-task-manager"]

# v2.1.0-sprint13 Property-Based Fuzzing — Consensus, Reputation & Sybil invariants
[[test]]
name = "consensus_fuzz"
path = "tests/fuzz/consensus_fuzz.rs"
required-features = ["v2.1-fuzzing", "v2.1-consensus-engine", "v2.1-reputation-system", "v2.1-sybil-micropow", "v1.7-sprint1"]

# v2.1.0-sprint17 Kernel E2E Cross-Validation — All 5 Stuartian Laws integrated
[[test]]
name = "kernel_e2e_test"
path = "tests/integration/kernel_e2e_test.rs"
required-features = ["v2.1-kernel-integration"]
