[package]
name = "ed2kIA-benchmarks"
version = "0.1.0"
edition = "2021"
description = "ed2kIA v2.1.0 — Performance benchmarks for SAE, CRDT, P2P sync, and tensor serialization"
license = "Apache-2.0"

[[bench]]
name = "sae_loader"
harness = false

[[bench]]
name = "tensor_serialization"
harness = false

[[bench]]
name = "p2p_sync"
harness = false

[[bench]]
name = "sae_inference"
harness = false

[[bench]]
name = "crdt_merge"
harness = false

[dependencies]
# Reference main library for types
ed2kia = { path = "..", features = ["stable"] }

# ML / Candle
candle-core = "0.6"
candle-nn = "0.6"
safetensors = "0.3"

# Serialization
flatbuffers = "23.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
