[package]
name = "ed2kia-desktop"
version = "2.1.0-sprint13"
edition = "2021"
description = "ed2kIA Desktop — Cross-platform client for decentralized interpretability"
license = "Apache-2.0"

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "ed2kia-desktop"
path = "src/main.rs"
