[package]
name = "ed2k-cli"
version.workspace = true
edition.workspace = true
description = "CLI interface for ed2kIA node operations"
license.workspace = true

[[bin]]
name = "ed2k-cli"
path = "src/main.rs"

[dependencies]
ed2kia = { path = "../.." }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
