[package]
name = "ed2k-consensus"
version = "12.5.0"
edition = "2021"
description = "Consensus mechanisms for ed2kIA (PoN, ZKP, MPC, Hierarchical Sharding)"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
sha2 = "0.10"
once_cell = "1.19"
parking_lot = "0.12"
hex = "0.4"
ed25519-dalek = "2.1"
ark-ec = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4"

[dev-dependencies]
tokio = { version = "1.38", features = ["full"] }
