[package]
name = "llamacpp-bridge"
version = "0.1.0"
edition = "2021"
description = "llama.cpp bridge API for ed2kIA SAE audit pipeline (OpenAI-compatible, localhost:8080)"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"

[features]
default = []
stable-core = []
