[package]
name = "native-audit"
version = "16.1.0"
edition = "2021"
description = "Native tensor audit core for ed2kIA — Candle-based hidden state extraction + TCM Z-axis"
license = "Apache-2.0"

[dependencies]
candle-core = "0.6"
candle-nn = "0.6"
candle-transformers = "0.6"
safetensors = "0.3"
tokenizers = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "gzip"] }
rand = "0.8"
sha2 = "0.10"
clarabel = "0.11"

# Pin half to 2.4.x to avoid rand 0.9 conflict (candle-core 0.6 needs rand 0.8)
half = ">=2.4, <2.5"

[dev-dependencies]
noosfera-kernel = { path = "../noosfera-kernel" }
ed2k-consensus = { path = "../consensus" }

[[test]]
name = "real_toxicity_eval"
path = "tests/real_toxicity_eval.rs"

[[test]]
name = "ablation_study"
path = "tests/ablation_study.rs"

[[test]]
name = "tube_mpc_verification"
path = "tests/tube_mpc_verification.rs"

[[bench]]
name = "koopman_mpc_vs_baseline"
harness = false
