[package]
name = "noosfera-kernel"
version = "0.1.0"
edition = "2021"
description = "Noosfera Kernel — Unified runtime for planetary symbiotic intelligence"
license = "Apache-2.0"

[dependencies]
native-audit = { path = "../native-audit" }
ed2k-consensus = { path = "../consensus" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
