[package]
name = "ollama-bridge"
version = "0.1.0"
edition = "2021"
description = "Ollama/LM Studio bridge API for ed2kIA SAE audit pipeline"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"

[features]
default = []
stable-core = []
