[package]
name = "ed2k-p2p"
version.workspace = true
edition.workspace = true
description = "P2P networking layer for ed2kIA distributed nodes"
license.workspace = true

[dependencies]
ed2kia = { path = "../.." }
libp2p = { workspace = true }
libp2p-identity = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
